NIFI-12557 Refactor components in kafka bundle using current API methods
remove unused methods and fields